--- a/doc/report/style.css
+++ b/doc/report/style.css
@@ -59,6 +59,15 @@ hr {
   border: none;
 }
 
+table td, table th {
+  text-align: center;
+  padding: 0.5em;
+}
+img {
+  width: 100%;
+  height: auto;
+}
+
 @media print {
   body {
     background-color: white;
